syntax = "proto3";

package helloworld;

option go_package = "../generate/helloworld";


// The greeting service definition.
service TestService {
  // Sends a greeting
  rpc CreateCache (CreateCacheRequest) returns (CreateCacheReply) {}
  rpc GetCacheKey (GetCacheKeyRequest) returns (GetCacheKeyReply) {}
  rpc SetCacheKey (SetCacheKeyRequest) returns (SetCacheKeyReply) {}
}

// The request message containing the user's name.
message GetCacheKeyRequest {
  string cacheName = 1;
  string cacheKey = 2;
}

// The response message containing the greetings
message GetCacheKeyReply {
  string cacheValue = 1;
}
// The request message containing the user's name.
message SetCacheKeyRequest {
  string cacheName = 1;
  string cacheKey = 2;
  string cacheVal = 3;
}

// The response message containing the greetings
message SetCacheKeyReply {
  string cacheVa = 1;
}

// The request message containing the user's name.
message CreateCacheRequest {
  string cacheName = 1;
}

// The response message containing the greetings
message CreateCacheReply {
  string message = 1;
}